[tool.poetry]
name = "aqueue"
version = "0.4.0"
description = "An async task queue with live progress display"
authors = ["Tim Martin <tim@timmart.in>"]
readme = "README.rst"
license = "MIT"
homepage = "https://t-mart.github.io/aqueue/"
repository = "https://github.com/t-mart/aqueue"
documentation = "https://t-mart.github.io/aqueue/"
keywords = ["queue", "async", "task"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Trio"
]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^22.1.0"
rich = "^12.6.0"
trio = "^0.22.0"
sortedcontainers = "^2.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.971"
pytest = "^7.1.3"
flake8 = "^5.0.4"
isort = "^5.10.1"
sphinx-autobuild = "^2021.3.14"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.3.0"
furo = "^2022.9.29"
sphinxcontrib-mermaid = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

