[tool.poetry]
name = "aqueue"
version = "0.9.3"
description = "An async task queue with live progress display"
authors = ["Tim Martin <tim@timmart.in>"]
readme = "README.rst"
license = "MIT"
homepage = "https://t-mart.github.io/aqueue/"
repository = "https://github.com/t-mart/aqueue"
documentation = "https://t-mart.github.io/aqueue/"
keywords = ["queue", "async", "task"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AnyIO"
]

[tool.poetry.dependencies]
python = "^3.12"
attrs = "^24"
rich = "^13"
sortedcontainers = "^2"
anyio = "^4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.2"
sphinx-autobuild = "^2024.2.4"
trio = "^0.24.0"
snakeviz = "^2.2.0"
ruff = "^0.3.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.3.0"
furo = "^2022.9.29"
sphinxcontrib-mermaid = "^0.7.1"
sphinx-autodoc-typehints = "^1.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

